--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,14 @@
   "description": "none",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon demo.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "imap": "^0.8.19",
