--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     build:
       context: ./client
     ports:
-      - "3000:80"
+      - "80:80"
     networks:
-      - touchless_network
+      - touchlessap-network
 
   server:
     build:
@@ -14,20 +14,10 @@ services:
     ports:
       - "3001:3001"
     networks:
-      - touchless_network
-
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - touchlessap-network
     depends_on:
       - client
-      - server
-    networks:
-      - touchless_network
 
 networks:
-  touchless_network:
+  touchlessap-network:
     driver: bridge
